# userspace-resource-manager-extensions

./: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  fasttext_lgbm_app_classifier.ipynb
Configs/: InitConfig.yaml  PerApp.yaml  ResourcesConfig.yaml  SignalsConfig.yaml  ignore_processes.txt
Configs/target-specific/: hamoa-iot-som  purwa-iot-som  qcs6490  qcs8845
Configs/target-specific/alorp/: ResourcesConfig.yaml  SignalsConfig.yaml
Configs/target-specific/glymur/: SignalsConfig.yaml
Configs/target-specific/hamoa/: SignalsConfig.yaml
Configs/target-specific/hamoa-iot-evk/: InitConfig.yaml  SignalsConfig.yaml
Configs/target-specific/purwa/: SignalsConfig.yaml
Configs/target-specific/purwa-iot-evk/: SignalsConfig.yaml
Configs/target-specific/qcm6490/: SignalsConfig.yaml
Configs/target-specific/qcs615/: SignalsConfig.yaml
Configs/target-specific/qcs8300/: InitConfig.yaml  SignalsConfig.yaml
Configs/target-specific/qcs9100/: SignalsConfig.yaml
Extensions/: CamPostProcessing.cpp  ClassifierPostProcessPlugin.cpp  CyclicTestsExt.cpp  Example.cpp  GenieT2T.cpp  Helpers.cpp  PostProcessingBlock.cpp  PredefCallbacks.cpp  PreemptRtExtn.cpp
Extensions/Include/: Helpers.h  PredefCallbacks.h
Relay/: BoostDetection.cpp  BoostManager.cpp  CgroupController.cpp
Relay/Include/: BoostManager.h  CgroupController.h
artifacts/: lgbm_model.txt  meta.json
debian/: changelog  control  copyright  rules
docs/: 01-architecture-overview.md  02-build-and-install.md  03-configuration-reference.md  04-resources-reference.md  05-signals-reference.md  06-extension-api-guide.md  07-per-app-configuration.md  07-post-processing-block.md  08-per-app-configuration.md  08-post-boot-init-scripts.md  09-adding-new-target.md  09-post-boot-init-scripts.md  10-adding-custom-resource.md  10-adding-new-target.md  11-adding-custom-resource.md  11-post-processing-blocks.md  12-adding-new-signal.md  13-contributing.md  README.md  README.old.md
include/: kgsl_gpu.h  ml_inference.h  msm_kgsl.h  parser.h  proc_stats.h
initscripts/post_boot/: post_boot.sh  post_boot_common.sh  post_boot_cq2390m.sh  post_boot_qcm6490.sh  post_boot_qcs8300.sh  urm_post_boot.sh
packaging/systemd/: classifier.service  urm.service
scripts/: inference.py
src/: CMakeLists.txt  Plugin.cpp  classifier.cpp  ml_inference.cpp  proc_metrics.cpp  proc_tokenizer.cpp  process_scanner.cpp  urm.cpp
src/proc_parser/: CMakeLists.txt  IgnoreTokens.txt  parser.cpp  parser.h  proc_stats.cpp  proc_stats.h  scanner.cpp
src/systemd/: classifier.service
